# ts-task-script-utils

./: .flake8  .gitignore  .pylintrc  .travis.yml  CONTRIBUTING.md  Pipfile  README.md  pull_request_template.md  pyproject.toml  requirements.txt  setup.py  spec.md
.github/workflows/: code_quality.yml  publish.yml
__tests__/integration/: test_convert_to_iso.py  test_datetime_parser.py  test_parse.py  test_parse_with_formats.py
__tests__/unit/: test_check_file_type.py  test_check_for_mutual_ambiguity.py  test_check_for_mutual_ambiguity_in_formats_list.py  test_convert_datetime_to_ts_format.py  test_convert_to_iso.py  test_datetime_info.py  test_datetime_parser.py  test_datetime_parser_utils.py  test_long_datetime_info.py  test_short_datetime_info.py  test_ts_datetime.py
__tests__/unit/parse_functions/: test_to_boolean.py  test_to_decimal.py  test_to_float.py  test_to_int.py
task_script_utils/: check_file_type.py  convert_datetime_to_ts_format.py  is_number.py  parse.py
task_script_utils/datetime_parser/: README.md  __init__.py  convert_to_iso_format.py  date_formats.py  datetime_config.py  datetime_info.py  fractional_seconds_formatter.py  long_datetime_utils.py  parser.py  parser_exceptions.py  patterns.py  pipeline_config.py  spec.md  ts_datetime.py  tz_dicts.py  tz_list.py  utils.py
task_script_utils/datetime_parser/utils/: checks.py  conversions.py  manipulation.py  parsing.py
