[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
extend-exclude = 'snapshots'

[tool.poetry]
name = "ts-task-script-utils"
version = "1.1.2"
description = "Python utility functions for Tetra Task Scripts"
authors = ["TetraScience <developers@tetrascience.com>"]
readme = "README.md"
homepage = "https://developers.tetrascience.com"
repository = "https://github.com/tetrascience/ts-task-script-utils"
packages = [
    { include = "task_script_utils" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
numpy = ">1.17,<2"
python-dateutil = ">=2.0"
dateparser = "*"
arrow = ">=1.0"
pendulum = ">=2.0"
pydash = ">=5.0"

[tool.poetry.dev-dependencies]
pytest = ">=6.0"
pytest-cov = ">=3.0"
black = ">=22.1.0"
